# plutus-vickrey-auction

./: cabal.project  hie.yaml  vickrey-auction.cabal
app/: auction-client.hs
src/Vickrey/: BsDigits.hs  Core.hs  Trace.hs
