Cabal-Version:      2.4
Name:               vickrey-auction
Version:            0.1.0.0
Author:              Ziemin
Maintainer:          ziemin@fastmail.com
Build-Type:          Simple
Copyright:           © 2021 Ziemin
License:             Apache-2.0
License-files:       LICENSE

library
  hs-source-dirs:      src
  exposed-modules:     Vickrey.BsDigits
                     , Vickrey.Core
                     , Vickrey.Trace 
  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , bytestring >= 0.10.10.0
                     , bytestring >= 0.10.10.0
                     , containers
                     , data-default
                     , freer-extras
                     , playground-common
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-tx
                     , plutus-tx-plugin
                     , plutus-use-cases
                     , prettyprinter
                     , regex-tdfa >= 1.3.1.0
                     , regex-tdfa >= 1.3.1.0
                     , req >= 3.9.0
                     , req >= 3.9.0
                     , text
                     , uuid >= 1.3.14
                     , uuid >= 1.3.14
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise

executable auction-pab
  main-is: auction-pab.hs
  hs-source-dirs:      app
  ghc-options:         -Wall -threaded
  build-depends:       aeson
                     , base ^>= 4.14.1.0
                     , bytestring >= 0.10.10.0
                     , bytestring >= 0.10.10.0
                     , freer-extras
                     , freer-simple
                     , plutus-contract
                     , plutus-ledger
                     , plutus-pab
                     , plutus-use-cases
                     , regex-tdfa >= 1.3.1.0
                     , regex-tdfa >= 1.3.1.0
                     , req >= 3.9.0
                     , req >= 3.9.0
                     , text
                     , uuid >= 1.3.14
                     , uuid >= 1.3.14
                     , vickrey-auction

executable auction-client
  main-is: auction-client.hs
  hs-source-dirs:      app
  ghc-options:         -Wall
  build-depends:       base ^>= 4.14.1.0
                     , bytestring
                     , bytestring >= 0.10.10.0
                     , bytestring >= 0.10.10.0
                     , regex-tdfa >= 1.3.1.0
                     , regex-tdfa >= 1.3.1.0
                     , regex-tdfa ^>= 1.3.1.0
                     , req >= 3.9.0
                     , req >= 3.9.0
                     , req ^>= 3.9.0
                     , text
                     , uuid
                     , uuid >= 1.3.14
                     , uuid >= 1.3.14
                     , aeson
                     , vickrey-auction
